# ios-control

./: FEATURES.md  README.md  main.py  pyproject.toml  requirements.txt
examples/: app_management.py  basic_example.py  home_connect_example.py  ui_automation_demo.py
ios_control/: __init__.py  cli.py  device.py  exceptions.py
tests/: conftest.py  test_device.py  test_home_connect_real_device.py
